--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       repo: 'superchris/simpla_test',
 
       // Netlify auth adapter, initialize with your Netlify site name
-      auth: new SimplaNetlify({ site: 'mysite' }),
+      auth: new SimplaNetlify({ site: 'nervous-carson-60ee5a' }),
 
       // Public content source (optional)
       // Defaults to fetching directly from Github
-      source: 'https://mysite.netlify.com'
+      source: 'https://nervous-carson-60ee5a.netlify.com/'
 
     });
   </script>
@@ -24,3 +24,6 @@
   <link rel="import" href="/bower_components/simpla-img/simpla-img.html">
   <link rel="import" href="/bower_components/simpla-admin/simpla-admin.html" async>
 </head>
+<body>
+  <simpla-text path="/text"></simpla-text>
+</body>
